deploy/base/blast/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blast
  annotations:
    description: "Namespace for all core services for the network"
