deploy/base/blast/dnsmasq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsmasq
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
      matchLabels:
        app: matchbox
  template:
    metadata:
      labels:
        name: dnsmasq
        app: blast
    spec:
      containers:
        - name: dnsmasq
          image: quay.io/poseidon/dnsmasq:latest
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          args:
            - --dhcp-range=192.168.1.3,192.168.1.254
            - --enable-tftp
            - --tftp-root=/var/lib/tftpboot
            - --dhcp-match=set:bios,option:client-arch,0
            - --dhcp-boot=tag:bios,undionly.kpxe
            - --dhcp-match=set:efi32,option:client-arch,6
            - --dhcp-boot=tag:efi32,ipxe.efi
            - --dhcp-match=set:efibc,option:client-arch,7
            - --dhcp-boot=tag:efibc,ipxe.efi
            - --dhcp-match=set:efi64,option:client-arch,9
            - --dhcp-boot=tag:efi64,ipxe.efi
            - --dhcp-userclass=set:ipxe,iPXE
            - --dhcp-boot=tag:ipxe,http://matchbox.r15cookie.lan:8080/boot.ipxe
            - --address=/matchbox.r15cookie.lan/172.18.110.81 
            - --log-queries 
            - --log-dhcp
          ports:
            - name: tftp
              containerPort: 69
            - name: dns
              containerPort: 53
            - name: dhcp
              containerPort: 67
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
